--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csrf": "^3.1.0",
     "dotenv-cli": "^6.0.0",
     "dotenv-safe": "^8.2.0",
+    "emotion": "^11.0.0",
     "ley": "^0.8.1",
     "next": "13.0.0",
     "postgres": "^3.3.1",
