--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": "dotenv ley"
+    "migrate": "dotenv ley",
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -27,6 +28,7 @@
     "@next/eslint-plugin-next": "13.0.3",
     "@ts-safeql/eslint-plugin": "0.0.21",
     "@types/eslint": "8.4.10",
+    "@types/jest": "^29.2.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -49,6 +51,8 @@
     "eslint-plugin-sonarjs": "0.16.0",
     "eslint-plugin-testing-library": "5.9.1",
     "eslint-plugin-unicorn": "44.0.2",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "libpg-query": "13.3.0",
     "postcss": "8.4.19",
     "postcss-scss": "4.0.5",
