--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "crypto-random-string": "^5.0.0",
     "csrf": "^3.1.0",
     "dotenv-cli": "^6.0.0",
     "dotenv-safe": "^8.2.0",
